--- a/pages/nf4514/n12646347.md
+++ b/pages/nf4514/n12646347.md
@@ -1,11 +1,11 @@
-### 【疫情更新12.26】法国出现首个新变种病例
+### 【疫情更新12.26】东京疫情创纪录 含新变种
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【疫情更新12.26】东京疫情创纪录 含新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
+<div><img alt="【疫情更新12.26】东京疫情创纪录 现新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
 <div class="caption">
  2020年12月25日，日本东京的人们正在欢度圣诞节。（PHILIP FONG/AFP via Getty Images）
 </div></div><hr/>
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月26日讯】（大纪元记者陈霆综合报导）在世界各地疫情复燃之际，新变种病毒也纷纷于各国现踪。法国卫生部周六表示，该国也发现了第一起
+ 【大纪元2020年12月26日讯】（大纪元记者陈霆、李言综合报导）在世界各地疫情复燃之际，新变种病毒也纷纷于各国现踪。法国卫生部周六表示，该国也发现了第一起
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
@@ -40,6 +40,94 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 新毒株于新年假期之前到来 东京染疫病例创纪录
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12646516" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12646516" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年12月25日，日本东京的人们正在欢度圣诞节。（PHILIP FONG/AFP via Getty Images）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 日本正在经历新一轮疫情数字激增。东京周六（12月26日）报告的
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ （
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+  武汉肺炎
+ </ok>
+ ）新增病例创下纪录，为949例。其中包括新发现的传播能力更强的变种毒株。
+</p>
+<p>
+ 日本正值新年假期，通常人流会从首都回到各省。政府敦促人们留在家中。
+</p>
+<p>
+ 重症病人较前一天的81例没有变化。
+</p>
+<h3>
+ 监狱教堂疫情爆发 韩国单日病例增幅创下第二高
+</h3>
+<p>
+ 路透社报导，由于监狱、疗养院和教堂的疫情持续增长，韩国周六（12月26日）公布，该国单日新增中共病毒（
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+  武汉肺炎
+ </ok>
+ ）病例创下第二高，当局呼吁停止所有年终聚会。
+</p>
+<p>
+ 韩国疾病预防控制局（KDCA）表示，周五该国新增1,132例中共病毒病例，与一天前记录的1,241例相距无远。
+</p>
+<p>
+ 卫生部长权德哲（Kwon Deok-cheol）在一次机构内会议上说：“这种病毒随时随地都可以传播。”他补充说，也有的人在与朋友和熟人小聚会的时候被感染。
+</p>
+<p>
+ “当我们站在第三波的十字路口时，我们如何阻止扩散取决于我们在今年年底和新年期间的消费方式。”
+</p>
+<p>
+ 政府计划在周日举行会议，讨论是否将大首尔地区的社交疏离规定升级到最严格水平。
+</p>
+<p>
+ 那将意味着关闭另外120万家商店；只允许基本工人进入办公室。目前夜总会、卡拉OK吧和其它夜间娱乐场所已被关门，并且晚上9点以后禁止在店内用餐。
+</p>
+<h3>
+ 西班牙现四病例 感染英国变种中共病毒
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12646456" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12646456" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为西班牙的医务工作者正在与中共病毒（武汉肺炎）患者交谈。(David Ramos/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 马德里健康顾问安东尼奥·萨帕特罗（Antonio Zapatero）在周六（12月26日）的新闻发布会上说，该地区于本月初有四人被诊断出感染中共病毒（武汉肺炎）变种。
+</p>
+<p>
+ 萨帕特罗称，其中一名感染者来自英国，于周四被诊断出染疫。
+</p>
+<p>
+ 另外三人是他们的家庭成员，他们在出现症状后去了医院。
+</p>
+<p>
+ 萨帕特罗说：“确诊患者的情况不是很严重。”他敦促谨慎行事，但也要求人们保持冷静。
+</p>
+<p>
+ “我们知道这种变体更容易传播，但不会引起更严重的反应。”
+</p>
+<p>
+ 萨帕特罗补充说：“还有其他三例可疑病例，检查结果应在周二或周三出来。”
+</p>
+<p>
+ 根据美国疾病预防控制中心（CDC）的数据，英国变种具有异常多的突变，其遗传密码中有14个突变和3个缺失，影响到其蛋白质组成部分。
+</p>
+<p>
+ 为英国政府提供建议的科学家们初步估计，这种变体的传播效果可能比其它变体高70％。
+</p>
+<h3>
  法国发现首例变种病例
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12515595" style="width: 450px">
@@ -47,11 +135,7 @@
   <img alt="" class="size-medium wp-image-12515595" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229327499-450x299.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  2020年10月28日，法国塞纳河畔伊夫里（Ivry-sur-Seine），安全性2级实验室Biomnis技术人员正使用PCR方法检测
-  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-   中共病毒
-  </ok>
-  。(LUDOVIC MARIN/AFP via Getty Images)
+  2020年10月28日，法国塞纳河畔伊夫里（Ivry-sur-Seine），安全性2级实验室Biomnis技术人员正使用PCR方法检测中共病毒。(LUDOVIC MARIN/AFP via Getty Images)
  </figcaption><br/>
 </figure><br/>
 <p>
@@ -320,6 +404,10 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 447.812px; width: 276.859px; height: 19px;">
+</div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 134px; top: 477px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
