--- a/pages/nsc418/n12646347.md
+++ b/pages/nsc418/n12646347.md
@@ -1,11 +1,11 @@
-### 【疫情更新12.26】东京疫情创纪录 含新变种
+### 【疫情更新12.26】东京疫情创纪录 现新变种
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【疫情更新12.26】东京疫情创纪录 含新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
+<div><img alt="【疫情更新12.26】东京疫情创纪录 现新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
 <div class="caption">
  2020年12月25日，日本东京的人们正在欢度圣诞节。（PHILIP FONG/AFP via Getty Images）
 </div></div><hr/>
@@ -40,6 +40,28 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 纽时：波士顿医生对Moderna疫苗严重过敏
+</h3>
+<p>
+ 《纽约时报》周五（12月25日）援引一名医生的话报导说，波士顿一名对贝类过敏的医生在周四接种Moderna的
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ 疫苗后，出现严重过敏反应。
+</p>
+<p>
+ 根据报导，来自波士顿医学中心的老年肿瘤学专家侯赛因·萨德尔扎德（Hossein Sadrzadeh）博士说，他在接种疫苗后几乎立即出现严重反应，头晕目眩，且心跳加速。
+</p>
+<p>
+ 路透社报导，这是首个被披露的与Moderna疫苗接种相关的严重反应案例。这种疫苗于本周一开始得以在全美范围内推广。
+</p>
+<p>
+ 波士顿医学中心的发言人戴维·基贝（David Kibbe）在周五的一份声明中说，“感到自己正在发生过敏反应”后，萨德尔扎德医生“被带到急诊室，进行了评估、治疗、观察和出院。他今天情况不错。”
+</p>
+<p>
+ 美国食品药品监督管理局（FDA）的一位官员上周表示，该机构正在对大约五种过敏反应进行调查。这些病例是在接种辉瑞公司和BioNTech SE联合开发的中共病毒疫苗后发生的。
+</p>
+<h3>
  新毒株于新年假期之前到来 东京染疫病例创纪录
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12646516" style="width: 600px">
@@ -51,11 +73,7 @@
  </figcaption><br/>
 </figure><br/>
 <p>
- 日本正在经历新一轮疫情数字激增。东京周六（12月26日）报告的
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- （
+ 日本正在经历新一轮疫情数字激增。东京周六（12月26日）报告的中共病毒（
  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
   武汉肺炎
  </ok>
