--- a/pages/nsc418/n12646347.md
+++ b/pages/nsc418/n12646347.md
@@ -1,4 +1,4 @@
-### 【疫情更新12.26】东京疫情创纪录 现新变种
+### 【疫情更新12.26】英国连续7天日增量超3万
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -39,6 +39,15 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 英国连续7天日增量超3万
+</h3>
+<p>
+ 英国连续七天日增病例超过3万。周六报告的日增数字为34,693例，与前七天的平均水平保持一致。死亡人数明显减少，为210人，而过去一周的日均死亡人数为522人。
+</p>
+<p>
+ 英国正在受到更具传染力的冠状新变种病毒的冲击，感染力增加高达70%。自从病毒变异的消息公布以来，英国受到了相当大的压力。约40个国家对英国实施旅行禁令。
+</p>
 <h3>
  马萨诸塞州实施新限制措施
 </h3>
