同步于: 12月27日4时52分

--- a/pages/nf4514/n12646347.md
+++ b/pages/nf4514/n12646347.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.26】英国连续7天日增量超3万" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/2011280800072124-600x400.jpg"/>
+<div><img alt="【疫情更新12.26】疫苗推出前 法新病例锐减" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012260035082124-600x400.jpg"/>
 <div class="caption">
- 图为11月27日，在伦敦街上随处可见预防中共病毒的提示，保持社交距离。 (Photo by TOLGA AKMEN/AFP via Getty Images)
+ 在疫情即将推出之际，法国新增病例忽然呈锐减态势。图为浪漫的法国人用被口罩包裹的圣诞树小雕像来表达他们对疫情的担忧。 (Photo by JOEL SAGET/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
