--- a/pages/nf4514/n12647429.md
+++ b/pages/nf4514/n12647429.md
@@ -47,25 +47,6 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 普京将接种
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- 疫苗
-</h3>
-<p>
- 据俄国媒体周日报导，俄罗斯总统普京计划接种中共病毒疫苗。
-</p>
-<p>
- 克里姆林宫发言人德米特里·佩斯科夫（Dmitry Peskov）对俄罗斯1号电视频道说：“他（普京）说他将接种疫苗，他做出了这个决定，并等待所有手续完成。”
-</p>
-<p>
- 现年68岁的普京此前表示，他没有理由接种疫苗，并说政府将把疫苗接种的重点放在老年人和高风险人群上。
-</p>
-<p>
- 据报导，俄国在今年早些时候宣布研发出号称安全有效的病毒疫苗，普京说，他的一个女儿在今年8月参加了俄罗斯斯普特尼克五型疫苗（Russia’s Sputnik V vaccine）的临床试验。
-</p>
-<h3>
  美国突破1,900万例确诊
 </h3>
 <p>
@@ -93,6 +74,9 @@
 <p>
  据报告，弗吉尼亚医院有2,495人确诊入院，其中514人在重症加护病房（ICU），318人使用呼吸机。该州目前有33%的呼吸机正在使用。
 </p>
+<p>
+ （编者注：这些数字是由弗吉尼亚州卫生部发布的，或与约翰·霍普金斯大学和病毒跟踪项目显示的实时数据不完全一致。）
+</p>
 <h3>
  全美医务总监：圣诞节后可能出现病例激增
 </h3>
@@ -109,7 +93,11 @@
  挪威检测出变异病毒
 </h3>
 <p>
- 据挪威公共卫生研究所（NIPH）周日透露，挪威已经有两人被检测出感染在英国传播的中共病毒变体。
+ 据挪威公共卫生研究所（NIPH）周日透露，挪威已经有两人被检测出感染在英国传播的
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ 变体。
 </p>
 <p>
  该研究所在一份新闻稿中说，该变体已从在12月到英国旅行的两个人中检测到。
