--- a/pages/p5/957244.md
+++ b/pages/p5/957244.md
@@ -1,4 +1,4 @@
-### 不敢出门的我爸我妈(图)
+### 3万美元的比特币离普通人正越来越远……(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,15 +6,16 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="扫码" src="https://img3.secretchina.com/pic/2020/11-2/p2809012a105826395-ss.jpg" style="height:400px; width:600px"/>
-  <br>
-   10月16日，北京，扫健康码的市民（图片来源：NICOLAS ASFOURI/AFP via Getty Images）
-   <span id="hideid" name="hideid" style="color:red;display:none;">
-    <span href="https://www.secretchina.com">
-    </span>
+ <p>
+  【看中国2020年12月28日讯】2020年12月27日，
+  <span href="https://www.secretchina.com/news/gb/tag/比特币" target="_blank">
+   比特币
+  </span>
+  价格突破2.79万美元，距离3万美元，仅有一步之遥。
+  <span id="hideid" name="hideid" style="color:red;display:none;">
+   <span href="https://www.secretchina.com">
    </span>
-  </br>
+  </span>
  </p>
  <div id="txt-mid1-t21-2017">
   
@@ -29,54 +30,60 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月2日讯】这一年来，我
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/爸妈" target="_blank">
-    爸妈
-   </span>
-  </strong>
-  死活不
-  <strong>
-   出门
-  </strong>
-  ，就在家里憋着。我觉得这样不对，但又无计可施。我担心他们一直这么下去，身体没出问题，精神先垮了。
+  除了笔者的置顶之外，点赞最多的留言，基本都是看空的。当然，有人会说了，郁金香泡沫还怎么怎么了，巴拉巴拉……
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  他们为什么不出门？主要原因是害怕——害怕
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/疫情" target="_blank">
-    疫情
-   </span>
-  </strong>
-  反复，也害怕不会预约、
-  <strong>
-   扫码
-  </strong>
-  。
+  好吧，就如同上面的一个留言所说，希望他们一直把比特币当成郁金香来看吧！
  </p>
  <p>
-  为防控疫情，人们走到哪里都要扫健康码。起初他们完全不会，后来被逼得也多少会些了，但操作得很慢。进个超市、逛个公园，都要站在门口摁半天手机，有时还要让人帮着摁，又怕人家把手机拿走不安全。
+  在23000美元附近停顿的时候，我还以为，因为基差太高（无风险收益率现在接近20%），大量套利资金的涌入，有可能会让比特币下跌一波，所以当时我个人判断，比特币有可能会在圣诞节前遭遇一轮暴跌，还在小红圈里发文提醒大家。
  </p>
  <p>
-  无论是看门的人，还是排在后面的年轻人，一般都会体谅老年人，也都愿意帮忙，并没什么抱怨，是他们俩自己又急又气，后来干脆不
-  <span href="https://www.secretchina.com/news/gb/tag/出门" target="_blank">
-   出门
+  没想到，对于短期的价格波动，我的判断总是错得离谱。
+ </p>
+ <p>
+  为什么会暴涨？
+ </p>
+ <p>
+  是的，大机构入场了，他们终于认识到比特币的价值了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  早在2020年3月份疫情爆发前后，著名的对冲基金经理保罗-多铎-琼斯（Paul Tudor Jones，美国历史上第一个对冲基金经理）以及索罗斯曾经的搭档斯坦利-德鲁肯米勒（Stanley Druckenmiller），都已经认知到比特币的价值，他们都开始买入比特币，至于著名的灰度基金（Gray），更是持续不断的在增持比特币。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  美国上市公司MicroStrategy，就在圣诞节前的周一，公开宣布再次购买29646枚比特币，致使其持仓达到了70470枚比特币，其CEO迈克尔-赛勒（Michael J. Saylor）表示：“今天宣布的对更多比特币的购买，再次证实了我们的信念，即比特币作为世界上使用最广泛的
+  <span href="https://www.secretchina.com/news/gb/tag/加密货币" target="_blank">
+   加密货币
   </span>
-  了。
- </p>
- <p>
-  我爸妈同龄，都是1953年出生，今年67。他俩曾是北大荒知青，恢复高考后考的大学，大学毕业后分配到了还不错的工作，十几年前先后从企业退休。俩人都是要强的人，也是体面的人。用我妈的话说：“没想到活了一辈子，老了老了，被社会抛弃了。寒心！”
- </p>
- <p>
-  她指的“抛弃”，就是现在几乎干什么都要用手机预约，走到哪儿都要用手机
-  <span href="https://www.secretchina.com/news/gb/tag/扫码" target="_blank">
-   扫码
-  </span>
-  ，只要不会，就恨不得寸步难行。
+  ，是可靠的价值存储。我们相信资产负债表的积极管理，加上公司收入和盈利能力的改善，是近期股价上涨的重要因素。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -91,7 +98,7 @@
   </div>
  </center>
  <p>
-  有一次我和我妈带孩子出门遛弯，孩子说想吃炸薯条，回家路上正好有个麦当劳，我妈兴冲冲地要进去买，还跟我说好：她买，别跟她抢。结果进门发现，这家麦当劳已经取消人工点餐窗口，全部手机或者机器点单了。她不会，还是只能我来。
+  赛勒还进一步宣布，公司已经通过发行6亿美元年债券的方式，用以购买更多的比特币，他还建议特斯拉的马斯克把自己的一部分财富换成比特币。而在此之前，美国的人寿保险公司MassMutual也证实，他们也购买了1亿美元的比特币，而且透露有其他保险公司也加入了这个行列……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -106,7 +113,7 @@
   </div>
  </center>
  <p>
-  另有一次我们全家一起吃饭，那家餐馆也是要求食客们自己扫码点餐。我妈信誓旦旦表示，今天必须她请客，并且她非要自己试试怎么操作。她总算小心翼翼点完餐，突然收到一条微信，点餐页面不见了，只能重来。重新点了一遍，付钱时她误触了页面上蹦出来的抽奖按钮，又不知道该怎么办了，最后还是只能我来。
+  保险公司，这可是传统金融机构里最保守的机构了，连他们也开始购买比特币？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,7 +128,25 @@
   </div>
  </center>
  <p>
-  我妈想给孩子花点钱都花不出去，气得直骂：“这还给不给人留活路了！要是我自己，就不吃了！扭头就走！”
+  留给普通人的机会越来越少。一方面是传统金融机构大量入局比特币；另一方面，各大交易所账户上的比特币总量却越来越少——下面就是15大加密货币交易所钱包的比特币总量的变动情况。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="15大加密货币交易所钱包的比特币总量变动情况" src="https://img3.secretchina.com/pic/2020/12-28/p2845991a643925064-ss.jpg" style="height:273px; width:600px"/>
+  <br>
+   15大加密货币交易所钱包的比特币总量变动情况（作者博客）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -136,7 +161,7 @@
   </div>
  </center>
  <p>
-  其实我妈手机玩得挺溜的，常沉迷玩手机到忘了自己颈椎病不该长时间低头。
+  大家可以看出，从2020年1月份开始，比特币交易所的比特币总量开始持续下降，而从7月份开始，这个下降开始加速……
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -151,7 +176,7 @@
   </div>
  </center>
  <p>
-  早在2014年，她就开创了自己的微信公众号，图文并茂地发表他们知青时代的回忆故事。平日里她爱在逛公园时用手机拍照，还参加公园举办的摄影比赛并获过奖。每隔一年半载，她会把外孙的照片视频用“小年糕”等APP做成电子影集。她也很会网购，在网上跟邻居拼团买水果，给外孙网购日用品，几乎每天都会接到快递。
+  正规金融机构入场购买，主要交易所的比特币流出——对，交易所流出的币，很大一部分进入了专业金融机构的账户。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -166,7 +191,7 @@
   </div>
  </center>
  <p>
-  我爸更是无时无刻不盯着手机在玩。我每天都会收到他微信群发过来的大小新闻和养生知识。他和我妈比着用手机拍照，也疯狂网购到我妈时常抱怨家里放不下这么多乱七八糟。
+  在比特币的世界里：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +206,7 @@
   </div>
  </center>
  <p>
-  我爸在科技时尚方面一直是“弄潮儿”。上世纪90年代中旬，我家就有了386电脑。虽然他说是为了办公用，但我印象中其实更多看到的是他在上面玩纸牌和扫雷。后来随着科技进步，我家电脑也跟着不停更新换代。等到各家亲友都有电脑了，我爸还经常去别人家帮忙修电脑。
+  拥有2.1个比特币，占总量的千万分之一；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +221,7 @@
   </div>
  </center>
  <p>
-  QQ、MSN、Yahoo Messenger我爸都有账号，他还曾和我的好朋友用MSN聊天。我爸比我更早开始用微信。我的第一台触屏智能手机，也是2012年底他给我买的。是我爸领我走进这个移动互联网的世界的，但他自己却不知不觉被关在了门外。
+  拥有21个比特币，占总量的百万分之一；
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +236,7 @@
   </div>
  </center>
  <p>
-  对于他们来说，自己摸索着玩手机是一码事，按人家的要求操作手机则是另一码事了。要注册、要登录，要左一遍右一遍地输入验证码、密码，他们跟不上、记不住，超过三步就想要放弃。更别提很多操作过程中都存在着陷阱，一不小心，就开始下载来路不明的应用程序，甚至吞掉你的余额。
+  拥有210个比特币，占总量的十万分之一。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,7 +251,7 @@
   </div>
  </center>
  <p>
-  大概从5年前开始，每周回家看爸妈，我都要帮我妈鼓捣一下手机——总有什么东西会在手机里找不着，总有密码会忘记。每次我随便点击几下就搞定的事，我妈都要惊呼：“你也没学过！你是怎么知道的？”还会非常谦卑地感谢我半天：“多亏有你！这要是没个孩子可怎么办！”
+  再向上，就是所谓的“千币户”和“万币侯”了。除非机缘巧合，一般的人，现在已经不大再有可能“富裕”到这个层次。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,7 +266,7 @@
   </div>
  </center>
  <p>
-  我妈对我的教育一直比较严厉，我从小都是仰视她长大的，被她这么一说，仿佛突然变换了视角，我总有点不适应。我也会暗自纳闷：“怎么这么简单的事，就不会弄呢？”但我从不敢把这话说出来，生怕打击到她的积极性。
+  最可惜的是，比特币世界的贫富差距，就在最近，正在变得越来越大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,7 +281,7 @@
   </div>
  </center>
  <p>
-  我爸也早就不是那个可以帮人修电脑的我爸了。但似乎为了维持自己“科技弄潮儿”的人设，我爸并不肯张嘴问，他本就是个寡言的人。有时有的东西实在不会弄，让我帮他鼓捣一下，我看到他手机满屏都是来路不明的垃圾应用程序，肯定都是之前他无意间下载的，就默默帮他删一删。
+  比特币世界的贫富差距，原本就很大。根据有人对比特币地址的统计，比特币数量最靠前的大约1600个比特币地址，拥有大约500万枚比特币，而另外有大约400万枚比特币实际上已经丢失——尽管它们在比特币链上清晰可见，但实际上，他们已经永远沉睡在这些账户中了，再也不会醒来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,82 +296,7 @@
   </div>
  </center>
  <p>
-  2012年底我曾出国旅游，问我爸要带点什么，他说想要个iPad，好像我去旅游的目的地国家比国内卖的便宜。但我那次光顾着自己玩，没有顾上帮他买，回来还跟他说似乎价格区别也不大。他说那就算了，我却总觉得很抱歉，终于在去年帮他买了个最新款的iPad，圆了心愿。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  每隔一阵我都会无意间问问我爸：iPad好用吗？我爸都说：还行、挺好。可我并没怎么见过他用，他还是一直盯着手机。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  前两个月我妈过生日，我姨送了她一个iPad，她让我帮她下载安装微信等APP。我一操作才知道ios系统竟然如此复杂，仅下载APP就要注册账号，输入很多遍密码、验证码，颇有点复杂。我知道这肯定教不明白，就没打算教我妈，就自己在那里操作。我妈在旁边很崇拜地看着我，很听话地给我念她手机接收到的一个个验证码。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  因为很多步骤还需要指纹识别，我就像捏笔一样捏着我妈的食指在iPad的home键上一次又一次地摁。我很久没和我妈拉手或者握手了，她的食指捏在我手里，细细软软的、皱巴巴的，让我有点陌生，又有点熟悉。前几天捏着家里两岁小孩的食指，指图画书上的挖掘机时，也是类似的感觉。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  父母是真的老了啊，老到像个小孩子一样了：需要我们手把手地教，却教也教不会了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  帮我妈都搞定以后，我又打开去年给我爸买的那个iPad，发现果然：就像新的一样，什么APP都没有安装过，屏幕上几乎连指纹都没有。他根本不会用，又没有说，就那么放着，放了一年。
+  举例来说，英国的IT从业者詹姆斯-豪厄尔(James Howell)曾经挖出过7500枚比特币，但他却意外地扔掉了存储密钥的硬盘。这个硬盘驱动器，已经被埋入威尔士的一个垃圾填埋场中，豪厄尔曾试图获得议会的许可，挖掘这个垃圾填埋场并且找回密钥，但没有成功。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -365,7 +315,7 @@
   </ins>
  </center>
  <p>
-  我跟我爸说：“iPad不好操作吧？您想下载什么，我帮您弄！”他依旧说：“还行。挺好。不用。”
+  根据Santiment平台的统计，就在最近的币价快速上涨中，千币户的账户数量正在变得越来越多，与此同时，不到1000枚比特币的地址数量，却出现了明显下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -380,7 +330,7 @@
   </div>
  </center>
  <p>
-  我很后悔，要是2012年那次帮他买了就好了。那时他兴许还愿意学，还能学会，那时的系统设置也没这么复杂。
+  一个合理的猜测就是：小型的比特币富人，正在现在的历史高价兑现利润；而真正的大鳄，却依然在持续收币，由此导致千币户变得越来越多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -395,147 +345,116 @@
   </div>
  </center>
  <p>
-  最近我采访，每天泡在医院里，看那些不会网络预约的老年人怎么挂号。他们通常像没头苍蝇一样地在各个窗口乱窜着问这个问那个，紧紧张张地排一个小时队在窗口被人用“现场没号，网上预约”这么两句话就打发走。他们大多是我父母的同龄人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他们有的人骂骂咧咧，有的人苦苦央求。他们当中机灵一点的，会把钱塞给陌生人拜托对方帮忙；固执一些的，就只能落寞地离开，但是他们第二天还会再来，虽然再来也是一样的结果。可是他们也没有别的办法了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  为什么不跟孩子说呢？为什么不让孩子帮忙预约呢？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “不用孩子！我活一辈子了，什么事儿都是我自己做，老了老了，看个病拿个药，我自己都不行了吗？”有的老人赌气说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “孩子最近不在家。”“孩子太忙了，十一都没放假。”“不想麻烦孩子。”更多老人会这么说。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  其实这些对孩子来说，并不怎么麻烦，躲在被窝里动动手指就能搞定。但他们就是没张嘴，就像我爸不张嘴问我怎么用iPad一样。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我问我爸妈：你们会网上预约挂号吗？原来他们也不会，只会打114电话挂号。可是114的号源太少了，动不动就要两三个月以后才有号，万一真生病，也等不及。所以他们才更不敢出门，因为他们太害怕生病了。以前生病还能进医院，现在生病连医院都进不去了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我下定决心：以后他们看病，无论如何都要陪他们一起！但我仍然很担心，他们想去医院看病却不告诉我，依旧跟我说：“还行。挺好。不用。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- (文章仅代表作者个人立场和观点)
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  我之前写过一篇文章：比特币的未来是星辰大海。其中提到：镰刀们如此锋利，一茬又一茬的韭菜们被来回地割，却还是无怨无悔，就好像比特币是真正的
+  <span href="https://www.secretchina.com/news/gb/tag/庞氏骗局" target="_blank">
+   庞氏骗局
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  一样；更进一步，当前金融体系的运转模式，好像永远可以无限印钞的法币系统才不是庞氏骗局，好像养老金系统不是庞氏骗局，好像负收益率债券不是庞氏骗局。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如果，要我给比特币一个终极的使命，它就是用来代替黄金，刺破过去半个世纪的信用货币泡沫的！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  从1971年迄今，在由各国政府控制的可以随意扩张的信用货币支撑之下，人类的经济似乎进入了一个永远指数增长的美好时代，每年经济都比上一年好，每年的财富都比上一年大量增加，在无限的欲望、无限的借贷刺激之下，人类经济和财富，似乎很快要把人类给撑爆炸，把地球撑爆炸，很快要充斥宇宙的每一个角落……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但是，从2009年起，那些不相信这一切的人们，有了另外一个选择——BTC。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  老实说，从这个世界上绝大多数人的财富、生活和未来来说，某种程度上说，我并不认为，由BTC主导的信用货币时代泡沫破裂是件好事，因为这意味着无数普通人的苦难。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但是，以美联储为首的各国央行们，自2008年以来，肆无忌惮的扩张信用货币方面，无耻到了极点，你又能指望什么东西呢？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  只要美联储为首的各国央行们，不放弃他们不负责任的信用货币扩张政策，不放弃随时施展他们点纸成金的魔法，比特币刺破人类信用货币泡沫的这个趋势和过程，很可能不以任何人的意志为转移。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  我所能做的，只是告诉你，这个过程当前很可能已经在发生当中。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -548,6 +467,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:宇真
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb411Q"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -565,13 +518,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/02/951140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957244.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957244.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957244.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/28/957244.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/951140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/957244.md' width='0px' height='0px'/>
