同步于: 12月28日17时52分

--- a/pages/nsc412/n12647429.md
+++ b/pages/nsc412/n12647429.md
@@ -345,11 +345,12 @@
  由于众多滑雪爱好者前往滑雪场，政府决定所有冬季体育设施全面停运，这涉及全国144处滑雪场和35处滑冰场。此外，将现行于首都地区的宗教设施保持社会距离防疫等级2.5级扩大至韩国全境，所有宗教活动均以线上方式进行，且禁止在宗教设施内聚会、用餐等。
 </p>
 <h3>
- 防新毒株传播 日本下周一禁外国访客入境
+ 医生接种疫苗后出现严重反应
 </h3>
 <p>
  《纽约时报》周五（12月25日）援引一名医生的话报导说，波士顿一名对贝类过敏的医生在周四接种Moderna的中共病毒疫苗后，出现严重过敏反应。
- <br/>
+</p>
+<p>
  根据报导，来自波士顿医学中心的老年肿瘤学专家侯赛因·萨德尔扎德（Hossein Sadrzadeh）博士说，他在接种疫苗后几乎立即出现严重反应，头晕目眩，且心跳加速。
 </p>
 <h3>
