--- a/pages/nf4514/n12649253.md
+++ b/pages/nf4514/n12649253.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.28】英国患者现嗅觉异常" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230211880-600x400.jpg"/>
+<div><img alt="【疫情更新12.28】北京暂停元旦和新年演出" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230325461-600x400.jpg"/>
 <div class="caption">
- 图为英国街头一景。(OLI SCARFF/AFP via Getty Images)
+ 12月28日，北京市民排队等候病毒检测。(JADE GAO/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -175,8 +175,8 @@
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc413/n12649253.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc413/n12649253.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc413/n12649253.md.png'/></a> <br/>
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12649253.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12649253.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/nf4514/n12649253.md.png'/></a> <br/>
 原文地址（需翻墙访问）：https://www.epochtimes.com/gb/20/12/28/n12649253.htm
 
 
@@ -184,4 +184,4 @@ https://github.com/gfw-breaker/banned-news3/blob/master/pages/nsc413/n12649253.m
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/nsc413/n12649253.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/nf4514/n12649253.md' width='0px' height='0px'/>
