--- a/pages/nsc418/n12649253.md
+++ b/pages/nsc418/n12649253.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.28】英国患者现嗅觉异常" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230211880-600x400.jpg"/>
+<div><img alt="【疫情更新12.28】日本国会议员染疫亡" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230290063-600x400.jpg"/>
 <div class="caption">
- 图为英国街头一景。(OLI SCARFF/AFP via Getty Images)
+ 2020年12月24日，日本东京银座区，街上许多民众戴着口罩。(PHILIP FONG/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
